src/objects/Clone_Relationship__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Child_Object__c</fullName>
        <description>API Name of Child Object</description>
        <label>Child Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Field__c</fullName>
        <description>API name of lookup field from Child to Parent object</description>
        <label>Lookup Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <description>API Name of Parent Object</description>
        <label>Parent Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Clone Relationship</label>
</CustomObject>